--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true"
     android:background="@color/white">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/img_head_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,7 +15,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_nav_icon" />
+        android:src="@mipmap/ic_nav_icon"
+        app:riv_oval="true"/>
 
     <View
         android:id="@+id/bg_nav_top_bg"
