--- a/app/src/main/res/layout/author_img_list.xml
+++ b/app/src/main/res/layout/author_img_list.xml
@@ -18,6 +18,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:theme="@style/ToolbarTheme"
+            app:navigationIcon="@drawable/back"
             app:title="作品"/>
 
     </android.support.design.widget.AppBarLayout>
