--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -81,7 +81,8 @@
                     android:text="1"
                     android:textSize="20sp"
                     android:textColor="#000000"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:clickable="false"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -89,7 +90,8 @@
                     android:text="关注"
                     android:textSize="16sp"
                     android:gravity="center"
-                    android:textColor="#555555"/>
+                    android:textColor="#555555"
+                    android:clickable="false"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/ll_fans_perosnal"
