--- a/app/src/main/res/layout/img_detail.xml
+++ b/app/src/main/res/layout/img_detail.xml
@@ -1,121 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <ImageView
-        android:id="@+id/iv_detail_img"
+    android:orientation="vertical">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/white"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/iv_detail_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/white" />
 
-    <RelativeLayout
-        android:id="@+id/rl_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:padding="10dp">
-        <Button
-            android:id="@+id/bt_img_detail_back"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/back"/>
-        <Button
-            android:id="@+id/bt_img_detail_share"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/share"/>
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_menu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:padding="10dp">
 
-    <LinearLayout
-        android:id="@+id/ll_author_img_name"
-        android:layout_below="@+id/iv_detail_img"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:paddingStart="30dp"
-        android:paddingTop="10dp">
-        <!--头像-->
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/iv_author_header"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/white"
-            app:riv_border_width="0dp"
-            app:riv_oval="true"/>
-        <!--姓名、简介-->
-        <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical"
-            android:layout_marginStart="10dp">
+                <Button
+                    android:id="@+id/bt_img_detail_back"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/back" />
+
+                <Button
+                    android:id="@+id/bt_img_detail_share"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/share" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_author_img_name"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_below="@+id/iv_detail_img"
+                android:paddingStart="30dp"
+                android:paddingTop="10dp">
+                <!--头像-->
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/iv_author_header"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/white"
+                    app:riv_border_width="0dp"
+                    app:riv_oval="true" />
+                <!--姓名、简介-->
+                <LinearLayout
+                    android:layout_width="220dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_img_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text="这里是图片名称"
+                        android:textSize="20dp" />
+
+                    <TextView
+                        android:id="@+id/tv_author_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:text="ssdr" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_img_publish_detail"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/ll_author_img_name"
+                android:orientation="horizontal"
+                android:paddingStart="30dp"
+                android:paddingTop="10dp">
+
+                <TextView
+                    android:id="@+id/tv_publishTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:text="2018-05-25 02:09:57" />
+
+                <TextView
+                    android:id="@+id/tv_img_click_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10dp"
+                    android:text="2333" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="阅读量"
+                    android:textColor="@color/colorPrimaryDark" />
+
+                <TextView
+                    android:id="@+id/tv_img_like_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10dp"
+                    android:text="2333" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Like"
+                    android:textColor="@color/colorPrimaryDark" />
+            </LinearLayout>
+
             <TextView
-                android:id="@+id/tv_img_name"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:textSize="20dp"
-                android:text="这里是图片名称"/>
-            <TextView
-                android:id="@+id/tv_author_name"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="ssdr"/>
-        </LinearLayout>
-    </LinearLayout>
+                android:id="@+id/tv_img_introduction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_img_publish_detail"
+                android:paddingBottom="25dp"
+                android:paddingStart="30dp"
+                android:paddingTop="10dp"
+                android:text="这里是图片介绍" />
 
+                <View.NoScrollListView
+                    android:id="@+id/lv_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_img_introduction"/>
+        </RelativeLayout>
+    </ScrollView>
     <LinearLayout
-        android:id="@+id/ll_img_publish_detail"
-        android:layout_below="@+id/ll_author_img_name"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingStart="30dp"
-        android:paddingTop="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_publishTime"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="2018-05-25 02:09:57"/>
-        <TextView
-            android:id="@+id/tv_img_click_num"
-            android:paddingStart="10dp"
-            android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:paddingEnd="15dp"
+        android:paddingStart="15dp">
+
+        <EditText
+            android:id="@+id/et_comment"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="2333"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="阅读量"/>
-        <TextView
-            android:id="@+id/tv_img_like_num"
-            android:paddingStart="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2333"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Like"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:layout_weight="8"
+            android:hint="觉得有趣就留下评论吧~" />
+
+        <Button
+            android:id="@+id/btn_submit"
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:background="@drawable/more" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_img_introduction"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_img_publish_detail"
-        android:paddingStart="30dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="25dp"
-        android:text="这里是图片介绍"/>
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_like"
         android:layout_width="wrap_content"
@@ -127,25 +171,6 @@
 
         app:backgroundTint="?attr/colorControlHighlight"
         app:borderWidth="0dp"
-        app:srcCompat="@drawable/favorites" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:layout_alignParentBottom="true">
-        <EditText
-            android:layout_width="0dp"
-            android:layout_weight="8"
-            android:layout_height="wrap_content"
-            android:hint="觉得有趣就留下评论吧~"/>
-        <Button
-            android:id="@+id/btn_student_info"
-            android:layout_width="0dp"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:background="@drawable/more"/>
-    </LinearLayout>
-
+        app:srcCompat="@drawable/favorites"
+        tools:ignore="RelativeOverlap" />
 </RelativeLayout>
