--- a/app/src/main/res/layout/author.xml
+++ b/app/src/main/res/layout/author.xml
@@ -211,6 +211,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/view_line"
+        android:clickable="true"
         android:textSize="16sp"
         android:gravity="right"
         android:paddingRight="30dp"
