--- a/app/src/main/res/layout/contribute_begin.xml
+++ b/app/src/main/res/layout/contribute_begin.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white">
     <Button
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:id="@+id/bt_begin_con"
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:text="上传作品"/>
+        android:text="上传作品"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:background="@drawable/shape2"/>
+    <TextView
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:id="@+id/tv_yourImg"
+        android:text="你的投稿"
+        android:textSize="16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bt_begin_con"/>
+    <View
+        android:id="@+id/aline"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/divider"
+        android:layout_below="@+id/tv_yourImg"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/srl_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:descendantFocusability="blocksDescendants">
+        android:descendantFocusability="blocksDescendants"
+        android:layout_below="@+id/aline">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rec_img"
@@ -22,4 +50,4 @@
             android:background="@color/white" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+</RelativeLayout>
