--- a/app/src/main/res/layout/contribute.xml
+++ b/app/src/main/res/layout/contribute.xml
@@ -27,10 +27,15 @@
         android:layout_height="wrap_content"
         android:hint="标签"/>
     <Button
-        android:id="@+id/bt_con_ok"
         android:layout_below="@id/con_type"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="12dp"
+        android:id="@+id/bt_con_ok"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
         android:text="完成"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:background="@drawable/shape2"/>
 
 </RelativeLayout>
